[gd_scene load_steps=4 format=3 uid="uid://bxbkrrbiq14yp"]

[ext_resource type="PackedScene" uid="uid://c0bufsj8db1tm" path="res://scenes/ui/settings/mouse_settings_ui.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/ui/settings/control_settings_ui.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://b8gq0s6857rkh" path="res://scenes/ui/settings/input_remap_dialog.tscn" id="4"]

[node name="ControlSettingsUI" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
script = ExtResource("3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ControlSettingsCategoryContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MouseSettingsUI" parent="MarginContainer/ControlSettingsCategoryContainer" instance=ExtResource("1")]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionBindingCategoriesContainer" type="VBoxContainer" parent="MarginContainer/ControlSettingsCategoryContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputRemapDialog" parent="MarginContainer/ControlSettingsCategoryContainer" instance=ExtResource("4")]
unique_name_in_owner = true
visible = false

[connection signal="about_to_popup" from="MarginContainer/ControlSettingsCategoryContainer/InputRemapDialog" to="." method="_on_InputRemapDialog_about_to_show"]
